Fixing the movie database and added z-index property in css

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   align-items: center;
   position: fixed;
   width: 100vw;
+  z-index: 100;
   background-color: var(--bg-color);
 }
 
